src/test/ui/type/type-alias-bounds-err.stderr
error: `T` cannot be sent between threads safely
  --> $DIR/type-alias-bounds-err.rs:19:22
   |
LL | type MySendable<T> = Sendable<T>;
   |                      ^^^^^^^^^^^ `T` cannot be sent between threads safely
   |
note: lint level defined here
  --> $DIR/type-alias-bounds-err.rs:12:9
   |
LL | #![deny(type_alias_missing_bounds)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: the trait `std::marker::Send` is not implemented for `T`
   = help: consider adding a `where T: std::marker::Send` bound
   = help: missing bounds in type aliases were previously allowed
   = help: this is a hard error in Rust 2018

error: the trait bound `U: Bound` is not satisfied
  --> $DIR/type-alias-bounds-err.rs:23:14
   |
LL | type T4<U> = <U as Bound>::Assoc;
   |              ^^^^^^^^^^^^^^^^^^^ the trait `Bound` is not implemented for `U`
   |
   = help: consider adding a `where U: Bound` bound
   = help: missing bounds in type aliases were previously allowed
   = help: this is a hard error in Rust 2018

error: aborting due to 2 previous errors

